the_cb/cb_theme/static/scss/_the_cb.scss
@font-face {
  font-family: 'Xiomara';
  src: url('/static/assets/xiomara.ttf');
}


html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  font-family: sans-serif;
  margin: 0;
}

a {
  text-decoration: none;

  &:hover, &:active, &:focus {
    text-decoration: none;
  }
}

.col-md-12 {
  padding-right: 0px;
  padding-left: 0px;
}

.product-sorting {
  display: flex;
  justify-content: center;
  margin: 0;
}

.primary-content {
  padding-top: 11rem;
}

.navbar-pink {
  background-color: white;
}

.nav-item {
  font-size: 2rem;
}

footer {
  background-color: inherit;
  border: none;
}

.form-control {
  line-height: 1;
}

.btn-primary:hover {
  background-color: $cb-pink;
  color: $cb-blue;
  border-color: $cb-pink;
}

.main-lockup {
  display: flex;
  background-color: white;
  border-bottom: 3px $cb-pink solid;
  padding: 0.3rem;
}

.main-lockup > * {
  flex: 1;
}

.lockup-logo {
  text-align: center;
  flex: 3;
}

.lockup-logo img {
  height: 8rem;
  max-width: 100%;
}

.icon-lockup {
  display: flex;
  justify-content: flex-end;
}

.icon-lockup .icon-item {
  padding: 0.1rem 0.5rem;
  font-size: 1.5rem;
}

@mixin link-menu() {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding-top: .5rem;
  padding-bottom: .5rem;
  min-height: 1rem;
}

@mixin link-menu-item() {
  padding: 0 1rem;

  a {
    color: $cb-blue;
    font-size: 2rem;
    color: $cb-blue;
    vertical-align: middle;
    &:hover, &:focus, &.active {
      color: $cb-pink;
      tex-decoration: none;
    }
  }
  &.divider-vertical {
    color: $cb-pink;
    padding: 1rem;
  }
}

.footer-lockup {
  @include link-menu();
}

.footer-link-item {
  @include link-menu-item();
  border-right: 1px solid $cb-pink;
  vertical-align: middle;
  a {
    font-size: 1rem;
  }
}

.link-lockup {
  @include link-menu();
  border-bottom: 3px $cb-pink solid;
  background-color: white;

  .toggleNav {
    display: none;
  }
}

.lockup-link-item {
  @include link-menu-item();
}

/* Remove this if i dont use nested menu */
.dropdown-toggle:after {
  content: none
}

.main-marquee {
  display: flex;
  justify-content: space-around;
}

.main-tagline {
  font-size: 4rem;
  line-height: 8rem;
  color: $cb-pink;
  font-family: 'Xiomara';
  display: flex;
  align-items: center;
  //background-color: $cb-blue;
  padding: 1rem;
  flex-direction: column;

  .sub-tagline {
    font-size: 2rem;
    line-height: 4rem;
  }
}

.product-wrapper {
  display: flex;
  padding: 1rem;
  flex-wrap: wrap;
}

.product-images {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  flex-basis: 60vw;
  img {
    border: 1px $gray-lightest solid;
  }

  .carousel-item.active {
    display: flex;
    justify-content: center;
    text-align: center;
    img {
      width: 35rem;
      height: 100%;
    }
  }
}

.product-thumbs {
  display: flex;
  order: 2;
  justify-content: center;
  align-items: center;
  padding-top: 1rem;
}

.product-full-imagesize {
  flex-grow: 2;
  order: 1;
}

.product-selection-fields {
  flex: 2;
}

.product-prominent {
  font-size: 2rem;
  color: $cb-pink;
  font-family: Xiomara;

  &#variations {
    font-family: Georgia;
    color: $cb-blue;
  }
}

.product-inputs {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex-wrap: wrap;
}

.product-buttons {
  width: 100%;
}

.search-lockup {
}

.link-graphical {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  padding: 2rem 0;
  border-top: 3px solid $cb-pink;
  margin-top: 3rem;
}

.modal-content {
  display: flex;
}

@mixin graphical-link-overlay($box-height: 10rem, $box-padding: initial, $font-size: 2rem, $box-width: 100%) {
  display: flex;
  width: $box-width;
  height: $box-height;
  background-color: $cb-pink;
  opacity: 0.8;
  color: $cb-blue;
  justify-content: center;
  align-items: center;
  font-size: $font-size;
  padding: $box-padding;
  div {
    opacity: 1;
  }
}

.graphical-link-item {
  min-height: 10rem;
  min-width: 11rem;
  display: flex;
  justify-content: center;
  align-items: center;

  &:hover {
    @include graphical-link-overlay();
  }
}

.graphical-link-item + .figure-caption {
    display: flex;
    justify-content: center;
    align-items: center;
    color: $cb-blue;
    height: 2.5rem;
}

#wrapper {
  display: block;
  width: 850px;
  background: #fff;
  margin: 0 auto;
  margin-bottom: 35px;
  padding: 25px 30px;
  border-radius: 4px;
}


#productlist {
  display: block;
  margin-bottom: 15px;
}

#productlist li {
  display: block;
  float: left;
  margin-bottom: 35px;
}

#productlist li img {
  display: block;
  float: left;
  margin-right: 10px;
}
#productlist li .details {
  display: block;
  float: left;
  width: 180px;
}

.category-controls {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 2rem;
}

.categories {
  display: flex;
  flex-direction: column;
  align-items: center;
}

button > i.fa-cart-plus {
  color: $cb-pink;
}

.cart-container {
  position: relative;
  font-family: Georgia;
}

.cart-container > .fa-stacker {
  font-size: .7rem;
  color: white;
  text-align: center;
  position: absolute;
  top: .25rem;
  z-index: 1101;
  left: 1.25rem;
  background-color: $cb-pink;
  padding: .1rem;
  border-radius: 10px;
  min-width: .9rem;
}

.table-striped tbody tr:first-child,
.table-striped tbody tr:last-child {
    background-color: $cb-pink;
}

.form-actions {
  background-color: inherit;
  border: none;
}

.full-page-padded {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  .checkout-confirmation {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .checkout-billing {
    display: flex;
    flex-direction: row;
    padding-top: 3rem;

    #payment-grouping {
        display: flex;
        flex-direction: column;
        padding-top: 2rem;
    }
  }
}

#personalize-product {
    display: flex;
    flex-direction: row;

    #personalization-types {
        flex-basis: 10rem;
    }
    #personalization-not-chosen {
        &.figure-caption {
          @include graphical-link-overlay(initial, 1rem, 1rem, 75%);
        }
    }
}

.form-control {
    appearance: none;
    border-radius: 0px;
}

.pagination {
  margin-top: 0px;
  margin-bottom: 0px;
  > li {
    > a,
    > span {
      padding: .25rem $pagination-padding-x;
    }
  }
}

@media all and (max-width: 850px) {
  .primary-content {
    padding-top: 15rem;
  }
}

@media all and (max-width:500px) {

  .col-md-12 {
    width: 100vw;
  }

  .link-lockup {
    flex-direction: column;
    align-items: center;

    &.open {
      .toggleNav {
        //display: none;
      }
      .lockup-link-item {
        display: flex;
        flex: 1;
        min-height: 2.5rem;
        &.divider-vertical {
          display: none;
        }
      }
    }
    
    &.secondary {
      border: none;
    }
    &.secondary.open {
      border-bottom: 3px $cb-pink solid;
    }
    
    .lockup-link-item {
      flex-basis: 100%;
      display: none;
    }
    .toggleNav {
      display: block;
    }
  }

  .footer-lockup {
    flex-direction: column;
    .footer-link-item {
        border: none;
        padding: 0 1rem;
    }
  }

  .icon-lockup {
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-end;
  }

  .product-wrapper {
    flex-direction: column;
    .product-full-imagesize {
      align-self: center;
      flex-grow: 1;
    }
  }

  .product-images {
    flex-basis: auto;
  }

  .category-controls {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .link-graphical {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .graphical-link-item {
    width: 25%;
    border: 2px solid $cb-blue;
    .figure-caption {
      @include graphical-link-overlay();
    }
  }
  
  #personalize-product {
    flex-direction: column;
  }
}

